<resources>
    <string name="app_name">BarberApp</string>
    <string name="app_classic_barber">Classic Barber</string>
    <string name="app_main_inicio">INICIO</string>
    <string name="app_menu_inicio_lowercase">Inicio</string>
    <string name="menu">Menú</string>
    <string name="reservas">Reservas</string>
    <string name="peinados">Peinados</string>
    <string name="media">Media</string>
    <string name="ajustes">Ajustes</string>
    <string name="logout">Salir</string>
    <string name="ok">Aceptar</string>

    <string name="version">Versión 1.0</string>
    <string name="copyright">© 2023 BarberApp</string>
    <string name="volumen">Volumen</string>
    <string name="frecuencia">Frecuencia</string>

    <string name="descripcion_clasico">Peinado formal y elegante adecuado para todo tipo de cabellos</string>
    <string name="descripcion_largo">Peinado para cabellos largos y alisados </string>
    <string name="descripcion_rapado">Peinado estilo militar para cabellos extremadamente corto</string>
    <string name="descripcion_dreadlocks">Peinado formado por cabello enredado y tejido, característico de los rastafaris. </string>
    <string name="descripcion_afro">Peinado propio de los cabellos rizados y secos</string>

    <string name="hint_nombre">Nombre:</string>
    <string name="hint_telefono">Telefono:</string>
    <string name="hint_correo_electronico">Correo electronico:</string>
    <string name="btn_guarda">Guardar registro</string>
    <string name="menu_nuevo">Nuevo registro</string>

    <string name="ubicacion">CALLE ANCHIETA 27, ESQUINA CON CALLE JUAN DE VERA, 38201 SAN CRISTÓBAL DE LA LAGUNA, SANTA CRUZ DE TENERIFE</string>
    <string name="correo">INFO@BARBERSHOP.ES</string>
    <string name="horario1">LUNES: 15:00/20:00</string>
    <string name="horario2">MARTES – VIERNES: 08:30/13:00 – 16:00/20:00</string>
    <string name="horario3">SÁBADOS: 09:00/14:00</string>
    <string name="telefono">643325232</string>


    <string name="resolucion">RESOLUCION</string>
    <string name="estado">ESTADO</string>
    <string name="luminocidad">BRILLO</string>
    <string name="localizacion">UBICACION</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>